* GSWeb.framework/GSWApplication.m ([GSWApplication -dealloc]): reset GSWApp. * GSWeb.framework/GSWStatisticsStore.m ([GSWStatisticsStore -init]): retain startDate. * GSWAdaptors/common/GSWUtil.c: use vsnprintf to prevent buffer overflow. * GSWAdaptors/common/GSWHTTPRequest.c (GSWHTTPRequest_SendRequest): terminate buffer.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@9220 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2001-02-23  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWApplication.m ([GSWApplication -dealloc]): reset
+	GSWApp.
+	* GSWeb.framework/GSWStatisticsStore.m ([GSWStatisticsStore -init]):
+	retain startDate.
+	* GSWAdaptors/common/GSWUtil.c: use vsnprintf to prevent buffer
+	overflow.
+	* GSWAdaptors/common/GSWHTTPRequest.c (GSWHTTPRequest_SendRequest):
+	terminate buffer.
+
 2001-01-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
 
 	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): use NSLog to
